--- a/server/homeassistant/config/include/Automations/PIDs.yaml
+++ b/server/homeassistant/config/include/Automations/PIDs.yaml
@@ -3,68 +3,56 @@
 # │                      KYBFarm – PID Control Loop Triggers                  │
 # └────────────────────────────────────────────────────────────────────────────┘
 
-
 # ─────────────────────────────── [Cooling PID] Loop ───────────────────────────── #
 - alias: "Cooling PID • Trigger"
   id: "cooling_pid_automation"
-  description: "Triggers Cooling PID every 5s if toggle is enabled"
   trigger:
-    - platform: time_pattern
-      seconds: "/5"
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "cooling_pid"
   condition:
     - condition: state
       entity_id: input_boolean.cooling_pid_enable_toggle
       state: "on"
   action:
     - service: mqtt.publish
-      metadata: {}
-      data_template:
-        qos: 0
-        retain: true
+      data:
         topic: "cmd/cooling_pid/req"
         payload: '{"cmd": "pid_enable"}'
   mode: single
 
-
 # ─────────────────────────────── [Heating PID] Loop ───────────────────────────── #
 - alias: "Heating PID • Trigger"
   id: "heating_pid_automation"
-  description: "Triggers Heating PID every 10s if toggle is enabled"
   trigger:
-    - platform: time_pattern
-      seconds: "/10"
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "heating_pid"
   condition:
     - condition: state
       entity_id: input_boolean.heating_pid_enable_toggle
       state: "on"
   action:
     - service: mqtt.publish
-      metadata: {}
-      data_template:
-        qos: 0
-        retain: true
+      data:
         topic: "cmd/heating_pid/req"
         payload: '{"cmd": "pid_enable"}'
   mode: single
 
-
 # ─────────────────────────────── [CO2 PID] Loop ──────────────────────────────── #
 - alias: "CO2 PID • Trigger"
   id: "co2_pid_automation"
-  description: "Triggers CO₂ PID every 30s if toggle is enabled"
   trigger:
-    - platform: time_pattern
-      seconds: "/30"
+    - platform: state
+      entity_id: input_text.main_loop_flag
+      to: "co2_pid"
   condition:
     - condition: state
       entity_id: input_boolean.co2_pid_enable_toggle
       state: "on"
   action:
     - service: mqtt.publish
-      metadata: {}
-      data_template:
-        qos: 0
-        retain: true
+      data:
         topic: "cmd/co2_pid/req"
         payload: '{"cmd": "pid_enable"}'
   mode: single
