--- a/server/homeassistant/config/include/mqtt_sensor_topics.yaml
+++ b/server/homeassistant/config/include/mqtt_sensor_topics.yaml
@@ -1,169 +1,266 @@
 # ┌────────────────────────────────────────────────────────────────────────────┐
-# │                       Home Assistant Sensor Automations                    │
-# │                   KYBFarm - MQTT Sensor Request Scheduler                  │
+# │                          Home Assistant MQTT Sensors                       │
+# │                       KYBFarm – Sensor Data and Calibration                │
 # └────────────────────────────────────────────────────────────────────────────┘
 
-# ──────────────── S-PAR-02 GT1 ────────────────
-- alias: "S-PAR-02 GT1 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 2
-    - platform: time_pattern
-      seconds: 24
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/spar02/gt1/req"
-        payload: '{"req_topic": "dt/gf/spar02/gt1/req", "res_topic": "dt/gf/spar02/gt1/res", "data": "ha_req"}'
-  mode: single
+# ──────────────── CO2/VOC Sensor ────────────────
 
-# ──────────────── S-PAR-02 GT2 ────────────────
-- alias: "S-PAR-02 GT2 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 2
-    - platform: time_pattern
-      seconds: 26
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/spar02/gt2/req"
-        payload: '{"req_topic": "dt/gf/spar02/gt2/req", "res_topic": "dt/gf/spar02/gt2/res", "data": "ha_req"}'
-  mode: single
+- name: "CO2/VOC Sensor [Humidity]"
+  unique_id: "CO2_VOC_HUMIDITY"
+  state_topic: "dt/gf/co2voc/1/res"
+  value_template: "{{ value_json['fields'].humidity }}"
+  unit_of_measurement: "%"
+  icon: "mdi:water-percent"
 
-# ──────────────── S-EC-01 GT1 ────────────────
-- alias: "S-EC-01 GT1 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 4
-    - platform: time_pattern
-      seconds: 28
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sec01/gt1/req"
-        payload: '{"req_topic": "dt/gf/sec01/gt1/req", "res_topic": "dt/gf/sec01/gt1/res", "data": "ha_req"}'
-  mode: single
+- name: "CO2/VOC Sensor [Temperature]"
+  unique_id: "CO2_VOC_TEMPERATURE"
+  state_topic: "dt/gf/co2voc/1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
 
-# ──────────────── S-EC-01 GT2 ────────────────
-- alias: "S-EC-01 GT2 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 6
-    - platform: time_pattern
-      seconds: 30
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sec01/gt2/req"
-        payload: '{"req_topic": "dt/gf/sec01/gt2/req", "res_topic": "dt/gf/sec01/gt2/res", "data": "ha_req"}'
-  mode: single
+- name: "CO2/VOC Sensor 1 [CO2]"
+  unique_id: "CO2_VOC_1_CO2"
+  state_topic: "dt/gf/co2voc/1/res"
+  value_template: "{{ value_json['fields'].co2 }}"
+  unit_of_measurement: "ppm"
+  icon: "mdi:molecule-co2"
 
-# ──────────────── S-EC-01 MX ────────────────
-- alias: "S-EC-01 MX • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 8
-    - platform: time_pattern
-      seconds: 32
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sec01/mx/req"
-        payload: '{"req_topic": "dt/gf/sec01/mx/req", "res_topic": "dt/gf/sec01/mx/res", "data": "ha_req"}'
-  mode: single
+- name: "CO2/VOC Sensor 1 [Dewpoint]"
+  unique_id: "CO2_VOC_1_DEWPOINT"
+  state_topic: "dt/gf/co2voc/1/res"
+  value_template: "{{ value_json['fields'].dewpoint }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer-lines"
 
-# ──────────────── STH01 1 ────────────────
-- alias: "STH01 1 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 5
-      # High frequency for environmental data
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sth01/1/req"
-        payload: '{"req_topic": "dt/gf/sth01/1/req", "res_topic": "dt/gf/sth01/1/res", "data": "ha_req"}'
-  mode: single
+- name: "CO2/VOC Sensor 1 [Volume Flow]"
+  unique_id: "CO2_VOC_1_VOLUME_FLOW"
+  state_topic: "dt/gf/co2voc/1/res"
+  value_template: "{{ value_json['fields'].volumeFlow }}"
+  unit_of_measurement: "m³/h"
+  icon: "mdi:air-filter"
 
-# ──────────────── STH01 2 ────────────────
-- alias: "STH01 2 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 12
-    - platform: time_pattern
-      seconds: 26
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sth01/2/req"
-        payload: '{"req_topic": "dt/gf/sth01/2/req", "res_topic": "dt/gf/sth01/2/res", "data": "ha_req"}'
-  mode: single
+# ──────────────── EC Sensor Calibrations ────────────────
 
-# ──────────────── S-PH-01 GT1 ────────────────
-- alias: "S-PH-01 GT1 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 14
-    - platform: time_pattern
-      seconds: 28
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sph01/gt1/req"
-        payload: '{"req_topic": "dt/gf/sph01/gt1/req", "res_topic": "dt/gf/sph01/gt1/res", "data": "ha_req"}'
-  mode: single
+- name: "EC Sensor GT1 [Calibration]"
+  unique_id: "S-EC-01_GT1_CAL"
+  state_topic: "cmd/ec_gt1/req"
+  value_template: "{{ value_json['result'] if value_json.get('result') else value_json }}"
+  icon: "mdi:checkbox-marked-circle-outline"
 
-# ──────────────── S-PH-01 GT2 ────────────────
-- alias: "S-PH-01 GT2 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 17
-    - platform: time_pattern
-      seconds: 31
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sph01/gt2/req"
-        payload: '{"req_topic": "dt/gf/sph01/gt2/req", "res_topic": "dt/gf/sph01/gt2/res", "data": "ha_req"}'
-  mode: single
+- name: "EC Sensor GT2 [Calibration]"
+  unique_id: "S-EC-01_GT2_CAL"
+  state_topic: "cmd/ec_gt2/req"
+  value_template: "{{ value_json['result'] if value_json.get('result') else value_json }}"
+  icon: "mdi:checkbox-marked-circle-outline"
 
-# ──────────────── S-PH-01 MX ────────────────
-- alias: "S-PH-01 MX • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 19
-    - platform: time_pattern
-      seconds: 33
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sph01/mx/req"
-        payload: '{"req_topic": "dt/gf/sph01/mx/req", "res_topic": "dt/gf/sph01/mx/res", "data": "ha_req"}'
-  mode: single
+- name: "EC Sensor MX [Calibration]"
+  unique_id: "S-EC-01_MX_CAL"
+  state_topic: "cmd/ec_mx/req"
+  value_template: "{{ value_json['result'] if value_json.get('result') else value_json }}"
+  icon: "mdi:checkbox-marked-circle-outline"
 
-# ──────────────── S-YM-01 [Leaf Wetness Sensor] ────────────────
-- alias: "S-YM-01 • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: 21
-    - platform: time_pattern
-      seconds: 45
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/sym01/req"
-        payload: '{"req_topic": "dt/gf/sym01/req", "res_topic": "dt/gf/sym01/res", "data": "ha_req"}'
-  mode: single
+# ──────────────── pH Sensor Calibrations ────────────────
 
-# ──────────────── CO2VOC [CO2 Sensor] ────────────────
-- alias: "CO2VOC • Request"
-  trigger:
-    - platform: time_pattern
-      seconds: "/10"
-  action:
-    - service: mqtt.publish
-      data:
-        topic: "dt/gf/co2voc/1/req"
-        payload: '{"req_topic": "dt/gf/co2voc/1/req", "res_topic": "dt/gf/co2voc/1/res", "data": "ha_req"}'
-  mode: single
+- name: "pH Sensor GT1 [Calibration]"
+  unique_id: "S-PH-01_GT1_CAL"
+  state_topic: "cmd/ph_gt1/req"
+  value_template: "{{ value_json['result'] if value_json.get('result') else value_json }}"
+  icon: "mdi:checkbox-marked-circle-outline"
+
+- name: "pH Sensor GT2 [Calibration]"
+  unique_id: "S-PH-01_GT2_CAL"
+  state_topic: "cmd/ph_gt2/req"
+  value_template: "{{ value_json['result'] if value_json.get('result') else value_json }}"
+  icon: "mdi:checkbox-marked-circle-outline"
+
+- name: "pH Sensor MX [Calibration]"
+  unique_id: "S-PH-01_MX_CAL"
+  state_topic: "cmd/ph_mx/req"
+  value_template: "{{ value_json['result'] if value_json.get('result') else value_json }}"
+  icon: "mdi:checkbox-marked-circle-outline"
+
+# ──────────────── EC Sensors ────────────────
+
+- name: "EC Sensor GT1 [EC]"
+  unique_id: "S-EC-01_GT1_EC"
+  state_topic: "dt/gf/sec01/gt1/res"
+  value_template: "{{ value_json['fields'].ec }}"
+  unit_of_measurement: "µS/cm"
+  icon: "mdi:flash"
+
+- name: "EC Sensor GT1 [TDS]"
+  unique_id: "S-EC-01_GT1_TDS"
+  state_topic: "dt/gf/sec01/gt1/res"
+  value_template: "{{ value_json['fields'].tds }}"
+  unit_of_measurement: "ppm"
+  icon: "mdi:scale"
+
+- name: "EC Sensor GT1 [Temperature]"
+  unique_id: "S-EC-01_GT1_TEMP"
+  state_topic: "dt/gf/sec01/gt1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+- name: "EC Sensor GT2 [EC]"
+  unique_id: "S-EC-01_GT2_EC"
+  state_topic: "dt/gf/sec01/gt2/res"
+  value_template: "{{ value_json['fields'].ec }}"
+  unit_of_measurement: "µS/cm"
+  icon: "mdi:flash"
+
+- name: "EC Sensor GT2 [TDS]"
+  unique_id: "S-EC-01_GT2_TDS"
+  state_topic: "dt/gf/sec01/gt2/res"
+  value_template: "{{ value_json['fields'].tds }}"
+  unit_of_measurement: "ppm"
+  icon: "mdi:scale"
+
+- name: "EC Sensor GT2 [Temperature]"
+  unique_id: "S-EC-01_GT2_TEMP"
+  state_topic: "dt/gf/sec01/gt2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+- name: "EC Sensor MX [EC]"
+  unique_id: "S-EC-01_MX_EC"
+  state_topic: "dt/gf/sec01/mx/res"
+  value_template: "{{ value_json['fields'].ec }}"
+  unit_of_measurement: "µS/cm"
+  icon: "mdi:flash"
+
+- name: "EC Sensor MX [TDS]"
+  unique_id: "S-EC-01_MX_TDS"
+  state_topic: "dt/gf/sec01/mx/res"
+  value_template: "{{ value_json['fields'].tds }}"
+  unit_of_measurement: "ppm"
+  icon: "mdi:scale"
+
+- name: "EC Sensor MX [Temperature]"
+  unique_id: "S-EC-01_MX_TEMP"
+  state_topic: "dt/gf/sec01/mx/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+# ──────────────── PAR Sensors ────────────────
+
+- name: "PAR Sensor 02 GT1 [PAR]"
+  unique_id: "S-PAR-02_GT1"
+  state_topic: "dt/gf/spar02/gt1/res"
+  value_template: "{{ value_json['fields'].par }}"
+  unit_of_measurement: "µmol/m²/s"
+  icon: "mdi:white-balance-sunny"
+
+- name: "PAR Sensor 02 GT2 [PAR]"
+  unique_id: "S-PAR-02_GT2"
+  state_topic: "dt/gf/spar02/gt2/res"
+  value_template: "{{ value_json['fields'].par }}"
+  unit_of_measurement: "µmol/m²/s"
+  icon: "mdi:white-balance-sunny"
+
+# ──────────────── pH Sensors ────────────────
+
+- name: "pH Sensor GT1 [pH]"
+  unique_id: "S-PH-01_GT1_PH"
+  state_topic: "dt/gf/sph01/gt1/res"
+  value_template: "{{ value_json['fields'].ph }}"
+  unit_of_measurement: "pH"
+  icon: "mdi:ph"
+
+- name: "pH Sensor GT1 [Temperature]"
+  unique_id: "S-PH-01_GT1_TEMP"
+  state_topic: "dt/gf/sph01/gt1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+- name: "pH Sensor GT2 [pH]"
+  unique_id: "S-PH-01_GT2_PH"
+  state_topic: "dt/gf/sph01/gt2/res"
+  value_template: "{{ value_json['fields'].ph }}"
+  unit_of_measurement: "pH"
+  icon: "mdi:ph"
+
+- name: "pH Sensor GT2 [Temperature]"
+  unique_id: "S-PH-01_GT2_TEMP"
+  state_topic: "dt/gf/sph01/gt2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+- name: "pH Sensor MX [pH]"
+  unique_id: "S-PH-01_MX_PH"
+  state_topic: "dt/gf/sph01/mx/res"
+  value_template: "{{ value_json['fields'].ph }}"
+  unit_of_measurement: "pH"
+  icon: "mdi:ph"
+
+- name: "pH Sensor MX [Temperature]"
+  unique_id: "S-PH-01_MX_TEMP"
+  state_topic: "dt/gf/sph01/mx/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+# ──────────────── STH Sensors ────────────────
+
+- name: "STH Sensor 1 [Dewpoint]"
+  unique_id: "STH01_1_DEWPOINT"
+  state_topic: "dt/gf/sth01/1/res"
+  value_template: "{{ value_json['fields'].dewpoint }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer-lines"
+
+- name: "STH Sensor 1 [Humidity]"
+  unique_id: "STH01_1_HUMIDITY"
+  state_topic: "dt/gf/sth01/1/res"
+  value_template: "{{ value_json['fields'].humidity }}"
+  unit_of_measurement: "%"
+  icon: "mdi:water-percent"
+
+- name: "STH Sensor 1 [Temperature]"
+  unique_id: "STH01_1_TEMP"
+  state_topic: "dt/gf/sth01/1/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+- name: "STH Sensor 2 [Dewpoint]"
+  unique_id: "STH01_2_DEWPOINT"
+  state_topic: "dt/gf/sth01/2/res"
+  value_template: "{{ value_json['fields'].dewpoint }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer-lines"
+
+- name: "STH Sensor 2 [Humidity]"
+  unique_id: "STH01_2_HUMIDITY"
+  state_topic: "dt/gf/sth01/2/res"
+  value_template: "{{ value_json['fields'].humidity }}"
+  unit_of_measurement: "%"
+  icon: "mdi:water-percent"
+
+- name: "STH Sensor 2 [Temperature]"
+  unique_id: "STH01_2_TEMP"
+  state_topic: "dt/gf/sth01/2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+# ──────────────── SYM01 ────────────────
+
+- name: "SYM01 [Leaf Wetness]"
+  unique_id: "S-YM-01_LEAF_WETNESS"
+  state_topic: "dt/gf/sym01/res"
+  value_template: "{{ value_json['fields'].wetness }}"
+  unit_of_measurement: ""
+  icon: "mdi:leaf"
+
+- name: "SYM01 [Temperature]"
+  unique_id: "S-YM-01_LEAF_TEMPERATURE"
+  state_topic: "dt/gf/sym01/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: ""
+  icon: "mdi:thermometer"
