--- a/server/homeassistant/config/configuration.yaml
+++ b/server/homeassistant/config/configuration.yaml
@@ -4,6 +4,8 @@ default_config:
 # Load frontend themes from the themes folder
 frontend:
   themes: !include_dir_merge_named themes
+  extra_module_url:
+    - /local/card-mod.js
 
 # External service configuration
 mqtt:
