--- a/server/homeassistant/config/include/GUI_helpers/input_number.yaml
+++ b/server/homeassistant/config/include/GUI_helpers/input_number.yaml
@@ -433,3 +433,28 @@ elixia_2_dusk_duration_735nm:
   step: 1
   unit_of_measurement: "min"
   mode: "box"
+
+# ─────────────── PIDs ─────────────── #
+co2_pid_kp:
+  name: "CO₂ PID – Kp"
+  min: 0
+  max: 1
+  step: 0.01
+  mode: box
+  icon: mdi:chart-line
+
+co2_pid_ki:
+  name: "CO₂ PID – Ki"
+  min: 0
+  max: 0.1
+  step: 0.001
+  mode: box
+  icon: mdi:sigma-lower
+
+co2_pid_kd:
+  name: "CO₂ PID – Kd"
+  min: 0
+  max: 0.1
+  step: 0.001
+  mode: box
+  icon: mdi:chart-bell-curve
