cleaned up files

--- a/kybfarm-docker-compose.yaml
+++ b/kybfarm-docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   requirements:
-    container_name: requirements
+    container_name: config_generator
     build: ./server/src
     volumes:
       - ./.env:/app/.env:ro
